egzamin/egzamin-backend-deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: egzamin-backend-deployment
  labels:
    app: egzamin-backend
    type: backend

spec:
  template:
    metadata:
      name: egzamin-backend-pod
      labels:
        app: egzamin-backend
        type: backend
    spec:
      containers:
        - name: egzamin-backend-container
          image: juuzeff/egzamin-backend
  replicas: 3
  selector:
    matchLabels:
      app: egzamin-backend
      type: backend
