egzamin/egzamin-frontend-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: egzamin-frontend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80

  selector:
    app: egzamin-frontend
    type: frontend
