egzamin/egzamin-postgres-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: egzamin-postgres-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 5432
      port: 5432
  selector:
    app: egzamin-postgres
    type: db
