egzamin/egzamin-redis-clusterip.yml
apiVersion: v1

kind: Service

metadata:
  name: egzamin-redis-clusterip

spec:
    type: ClusterIP
    ports:
      - targetPort: 6379
        port: 6379
    selector:
      app: egzamin-redis
      type: cache
